# hangman-online

./: .editorconfig  .gitignore  Cargo.toml  README.md  todos.md
.cargo/: config
hangman-client/: Cargo.toml
hangman-client/src/: main.rs
hangman-data/: Cargo.toml
hangman-data/src/: api.rs  game.rs  lib.rs  user.rs  ws.rs
hangman-data/src/api/: ws.rs
hangman-server/: Cargo.toml
hangman-server/src/: api.rs  config.rs  game.rs  main.rs  sender_utils.rs  word_generator.rs
hangman-server/src/game/: logic.rs
hangman-server/src/game/logic/: competitive.rs  team.rs  word.rs
hangman-web/: Cargo.toml  Dioxus.toml  build.rs  index.html
hangman-web/src/: components.rs  create_game.rs  create_lobby.rs  create_user.rs  game.rs  global_state.rs  home.rs  input.css  join_lobby.rs  main.rs  storage.rs  urls.rs
hangman-web/src/components/: button.rs  container.rs  error.rs
hangman-web/src/game/: create_user.rs  ongoing_game.rs
hangman-web/src/game/ongoing_game/: game_logic.rs  hangman.rs  scoreboard.rs  ws_logic.rs
wordlists/: README.md  deu-de_web_2021_1M-words.pre.txt  eng-com_web-public_2018_1M-words.pre.txt  fra_mixed_2009_1M-words.pre.txt  rus-ru_web-public_2019_1M-words.pre.txt  spa_web_2016_1M-words.pre.txt  tur-tr_web_2019_1M-words.pre.txt
wordlists-preprocessor/: Cargo.toml
wordlists-preprocessor/src/: main.rs
