[package]
name = "hangman-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.2.0"
thiserror = "1.0.38"

rand = { version = "0.8.5" }
getrandom = { version = "0.2.8", features = ["js"] }
