[package]
name = "hangman-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.1.0"
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.38"

rand = { version = "0.8.5" }
getrandom = { version = "0.2.8", features = ["js"] }
