[package]
name = "hangman-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hangman-data = { path = "../hangman-data" }
serde = { version = "1.0.152", features = ["derive"] }

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.9", features = ["ws"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
