[package]
name = "hangman-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["toml"] }
thiserror = "1.0.39"
rand = "0.8.5"

hangman-data = { path = "../hangman-data" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4.24", features = ["serde"] }
unicode-segmentation = "1.10.1"

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.17.1"
futures = "0.3.26"
async-trait = "0.1.65"

axum = { version = "0.6.9", features = ["ws"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tungstenite = "0.20.0" # To use error type

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
