[package]
name = "hangman-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
fermi = "0.3.0"
dioxus-web = "0.3.0"

log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }
