[package]
name = "hangman-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hangman-data = { path = "../hangman-data" }

dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
fermi = "0.3.0"
dioxus-material-icons = "1.0.2"
dioxus-web = "0.3.0"

thiserror = "1.0.38"
log = "0.4.17"
console_log = { version = "0.2.0", features = ["color"] }

web-sys = { version = "0.3.61", features = ["Window", "Navigator", "Clipboard", "Storage"] }
wasm-bindgen-futures = "0.4.34"
gloo-timers = { version = "0.2.6", features = ["futures"] }
reqwest = { version = "0.11.14", features = ["json"] }

gloo-net = { version = "0.2.6", features = ["websocket"] }
gloo-utils = "0.1.6"
futures = "0.3.26"

rand = { version = "0.8.5" }
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
form_urlencoded = "1.1.0"
